--- a/views/quartet.html
+++ b/views/quartet.html
@@ -137,7 +137,7 @@
 			  	.attr("class", "buttonsGroup");
 
 			var colorScale = d3.scale.ordinal()
-			.range(["#377eb8","#4daf4a","#984ea3","#ff7f00"]);;
+			.range(["#377eb8","#4daf4a","#984ea3","#ff7f00"]);
 
 			var buttons = buttonsGroup.append("input")
 				.attr({
