--- a/views/test.html
+++ b/views/test.html
@@ -11,17 +11,14 @@ circle {
 
 <body>
 
-<h1>Change!</h1>
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script>
 
 <script>
 
-  var width = 200,
+  var width = 1200,
       height = 800;
 
-  var colorScale = d3.scale.ordinal()
-			.range(["#ffffcc","#d9f0a3","#addd8e","#78c679","#31a354","#006837"]);
+  var colorScale = d3.scale.category20c()
 
   var svg = d3.select("body")
               .append("svg")
