added working links to index header

--- a/views/index.html
+++ b/views/index.html
@@ -4,12 +4,13 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="bootstrap.css">
+		<link rel="stylesheet" type="text/css" href="bootstrap.css">
+
 		<nav class="navbar navbar-default navbar-fixed-top">
 	 		<div class="container">
-	    		<ul>
-	    			<li>thing one</li>
-	    			<li>thing two</li>
-	    			<li>thing three</li>
+	    		<ul class="nav navbar-nav">
+	    			<li><a href="quartet.html">Anscombe's Quartet</a></li>
+	    			<li><a href="barley.html">Barley</a></li>
 	    		</ul>
 	  		</div>
 		</nav>
