Fixed header links in index

--- a/views/index.html
+++ b/views/index.html
@@ -9,8 +9,8 @@
 		<nav class="navbar navbar-default navbar-fixed-top">
 	 		<div class="container">
 	    		<ul class="nav navbar-nav">
-	    			<li><a href="quartet.html">Anscombe's Quartet</a></li>
-	    			<li><a href="barley.html">Barley</a></li>
+	    			<li><a href="quartet">Anscombe's Quartet</a></li>
+	    			<li><a href="barley">Barley</a></li>
 	    		</ul>
 	  		</div>
 		</nav>
