Adding cover page

--- a/views/index.html
+++ b/views/index.html
@@ -1,26 +1,114 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<html lang="en">
 
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="bootstrap.css">
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+		<title>DadaData</title>
+
+		<!-- Bootstrap -->
 		<link rel="stylesheet" type="text/css" href="bootstrap.css">
 
-		<nav class="navbar navbar-default navbar-fixed-top">
-	 		<div class="container">
-	    		<ul class="nav navbar-nav">
-	    			<li><a href="quartet">Anscombe's Quartet</a></li>
-	    			<li><a href="barley">Barley</a></li>
-	    		</ul>
-	  		</div>
-		</nav>
+		<!-- Custom styles for "Cover" template -->
+    <!-- <link href="http://getbootstrap.com/examples/cover/cover.css" rel="stylesheet"> -->
+
 	</head>
-	
+
+	<style>
+		
+		body {
+	  text-align: center;
+		}
+
+		.cover {
+			/*width:700px;*/
+			/*position: fixed;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);*/
+		}
+
+	</style>
+		
 	<body>
 
-		
-		
-	<p>hello world!</p>
+	  <!-- Static navbar -->
+	  <nav class="navbar navbar-default navbar-static-top">
+	    <div class="container">
+	      <div class="navbar-header">
+	        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+	          <span class="sr-only">Toggle navigation</span>
+	          <span class="icon-bar"></span>
+	          <span class="icon-bar"></span>
+	          <span class="icon-bar"></span>
+	        </button>
+	        <a class="navbar-brand" href="#">DadaData</a>
+	      </div>
+	      <div id="navbar" class="navbar-collapse collapse">
+	        <ul class="nav navbar-nav">
 
+	          <!-- <li class="dropdown">
+	            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+	            <ul class="dropdown-menu">
+	              <li><a href="#">Action</a></li>
+	              <li><a href="#">Another action</a></li>
+	              <li><a href="#">Something else here</a></li>
+	              <li role="separator" class="divider"></li>
+	              <li class="dropdown-header">Nav header</li>
+	              <li><a href="#">Separated link</a></li>
+	              <li><a href="#">One more separated link</a></li>
+	            </ul>
+	          </li> -->
+	        </ul>
+	        <ul class="nav navbar-nav navbar-right">
+	          <!-- <li><a href="../navbar/">Default</a></li> -->
+	          <li class="active"><a href="#">Home</a></li>
+	          <li><a href="#Visualizations">Visualizations</a></li>
+	          <li><a href="#About">About</a></li>
+	          <li><a href="#Contact">Contact</a></li>
+	        </ul>
+	      </div><!--/.nav-collapse -->
+	    </div>
+	  </nav>
+
+	  <div class="container">
+
+	  	<div class="conainer-inner">
+
+			  <div class="cover">
+			    <h1 class="cover-heading">Cover your page.</h1>
+			    <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+			    <p class="lead">
+			      <a href="#" class="btn btn-lg btn-default">Learn more</a>
+			    </p>
+			  </div>
+
+		    <!-- Main component for a primary marketing message or call to action -->
+		    <!-- <div class="jumbotron">
+		      <h1>S'up Amanda</h1>
+		      <p>Just wanted to say I love you</p>
+		      <p> :) </p>
+		      <p>
+		        <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">Please give me a hug &raquo;</a>
+		      </p>
+		    </div> -->
+
+	    </div> <!-- /container-inner -->
+
+	  </div> <!-- /container -->
+
+
+	  <!-- Bootstrap core JavaScript
+	  ================================================== -->
+	  <!-- Placed at the end of the document so the pages load faster -->
+	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	  <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+	  <script src="../../dist/js/bootstrap.min.js"></script>
+	  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+	  <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
 	</body>
 </html>
