polished index.html, added cover photo

--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<html lang="en">
+<html class="full" lang="en">
 
 <html>
 	<head>
@@ -8,37 +8,30 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
 		<title>DadaData</title>
 
-		<!-- Bootstrap -->
-		<link rel="stylesheet" type="text/css" href="bootstrap.css">
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-		<!-- Custom styles for "Cover" template -->
-    <!-- <link href="http://getbootstrap.com/examples/cover/cover.css" rel="stylesheet"> -->
+		<!-- Optional theme -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+		<!-- Latest compiled and minified JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+		<!-- My custom css file -->
+		<link rel="stylesheet" type="text/css" href="custom.css">
 
 	</head>
 
-	<style>
-		
-		body {
-	  text-align: center;
-		}
-
-		.cover {
-			/*width:700px;*/
-			/*position: fixed;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);*/
-		}
-
-	</style>
-		
 	<body>
+
+		<body bgcolor="red">
 
 	  <!-- Static navbar -->
 	  <nav class="navbar navbar-default navbar-static-top">
-	    <div class="container">
+	    <div class="container topbar">
 	      <div class="navbar-header">
 	        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
 	          <span class="sr-only">Toggle navigation</span>
@@ -80,10 +73,10 @@
 	  	<div class="conainer-inner">
 
 			  <div class="cover">
-			    <h1 class="cover-heading">Cover your page.</h1>
-			    <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+			    <h1 class="cover-heading">Welcome to DadaData</h1>
+			    <p class="lead blurb">Interactive data visualizations for realists and surrealits alike.</p>
 			    <p class="lead">
-			      <a href="#" class="btn btn-lg btn-default">Learn more</a>
+			      <a href="#" class="btn btn-lg btn-default">See Visualizations</a>
 			    </p>
 			  </div>
 
