--- a/public/custom.css
+++ b/public/custom.css
@@ -25,7 +25,7 @@ body {
 
 .full {
   /*background: url('http://placehold.it/1920x1080') no-repeat center center fixed;*/
-  background: url('tapetunnel-lg.png') no-repeat center center fixed;
+  background: url('tapetunnel-web.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
