changed "full" class to body from html element

--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<html class="full" lang="en">
+<html lang="en">
 
 <html>
 	<head>
@@ -25,9 +25,7 @@
 
 	</head>
 
-	<body>
-
-		<body bgcolor="red">
+	<body class="full">
 
 	  <!-- Static navbar -->
 	  <nav class="navbar navbar-default navbar-static-top">
