Got all pages of website working, with links on Visualizations page

--- a/views/about.html
+++ b/views/about.html
@@ -70,7 +70,7 @@
 	  	<div class="conainer-inner">
 
 			  <div class="cover">
-			    <h1 class="cover-heading">Welcome to DadaData</h1>
+			    <h1 class="cover-heading">Welcome to DadaData/about</h1>
 			    <p class="lead blurb">Interactive data visualizations for realists and surrealits alike.</p>
 			    <p class="lead">
 			      <a href="visualizations" class="btn btn-lg btn-default">See Visualizations</a>
