--- a/views/visualizations.html
+++ b/views/visualizations.html
@@ -70,12 +70,12 @@
 	  	<div class="conainer-inner">
 
 			  <div class="cover">
-			    <h1 class="cover-heading">Welcome to DadaData</h1>
-			    <p class="lead blurb">Interactive data visualizations for realists and surrealits alike.</p>
-			    <p class="lead">
-			      <a href="visualizations" class="btn btn-lg btn-default">See Visualizations</a>
-			    </p>
-			  </div>
+			    <h1 class="cover-heading">Visualizations</h1>
+			    <p class="lead blurb">Click on a viz!</p>
+			    <ul class="list-group">
+		          <li class="list-group-item"><a href="quartet">Anscombe's Quartet</a></li>
+		          <li class="list-group-item"><a href="barley">Minnesota Barley Trial</a></li>
+	        	</ul>
 
 	    </div> <!-- /container-inner -->
 
