--- a/views/contact.html
+++ b/views/contact.html
@@ -56,10 +56,10 @@
 	        </ul>
 	        <ul class="nav navbar-nav navbar-right">
 	          <!-- <li><a href="../navbar/">Default</a></li> -->
-	          <li class="active"><a href="index">Home</a></li>
+	          <li><a href="index">Home</a></li>
 	          <li><a href="visualizations">Visualizations</a></li>
 	          <li><a href="about">About</a></li>
-	          <li><a href="contact">Contact</a></li>
+	          <li class="active"><a href="contact">Contact</a></li>
 	        </ul>
 	      </div><!--/.nav-collapse -->
 	    </div>
