Changed text in About and Contact

--- a/views/contact.html
+++ b/views/contact.html
@@ -70,11 +70,11 @@
 	  	<div class="conainer-inner">
 
 			  <div class="cover">
-			    <h1 class="cover-heading">Welcome to DadaData/contact</h1>
-			    <p class="lead blurb">Interactive data visualizations for realists and surrealits alike.</p>
-			    <p class="lead">
+			    <h1 class="cover-heading">Email:</h1>
+			    <p class="lead blurb">alejandrokennedy@gmail.com</p>
+			    <!-- <p class="lead">
 			      <a href="visualizations" class="btn btn-lg btn-default">See Visualizations</a>
-			    </p>
+			    </p> -->
 			  </div>
 
 	    </div> <!-- /container-inner -->
