--- a/views/about.html
+++ b/views/about.html
@@ -70,11 +70,11 @@
 	  	<div class="conainer-inner">
 
 			  <div class="cover">
-			    <h1 class="cover-heading">Welcome to DadaData/about</h1>
-			    <p class="lead blurb">Interactive data visualizations for realists and surrealits alike.</p>
-			    <p class="lead">
+			    <h1 class="cover-heading">About DadaData</h1>
+			    <p class="lead blurb">Based in Brooklyn.<br>Data visualizations to make you think.</p>
+			    <!-- <p class="lead">
 			      <a href="visualizations" class="btn btn-lg btn-default">See Visualizations</a>
-			    </p>
+			    </p> -->
 			  </div>
 
 	    </div> <!-- /container-inner -->
