--- a/views/about.html
+++ b/views/about.html
@@ -70,8 +70,8 @@
 	  	<div class="conainer-inner">
 
 			  <div class="cover">
-			    <h1 class="cover-heading">About DadaData</h1>
-			    <p class="lead blurb">Based in Brooklyn.<br>Data visualizations to make you think.</p>
+			    <h1 class="cover-heading">DadaData</h1>
+			    <p class="lead blurb boxed">Interactive data visualizations<br>Made with love in Brooklyn<br>&#10697<br>Data insights and data art<br>For both hemispheres of the brain</p>
 			    <!-- <p class="lead">
 			      <a href="visualizations" class="btn btn-lg btn-default">See Visualizations</a>
 			    </p> -->
