--- a/views/contact.html
+++ b/views/contact.html
@@ -71,7 +71,7 @@
 
 			  <div class="cover">
 			    <h1 class="cover-heading">Email:</h1>
-			    <p class="lead blurb">alejandrokennedy@gmail.com</p>
+			    <p class="lead blurb boxed">alejandrokennedy@gmail.com</p>
 			    <!-- <p class="lead">
 			      <a href="visualizations" class="btn btn-lg btn-default">See Visualizations</a>
 			    </p> -->
