--- a/views/barley.html
+++ b/views/barley.html
@@ -104,8 +104,8 @@
 
 </body>
 
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script> -->
-<script src="d3.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script>
+<!-- <script src="d3.min.js"></script> -->
 
 <script>
 
