--- a/views/barley.html
+++ b/views/barley.html
@@ -27,8 +27,13 @@
 		margin-left: 3%;
 		width: 25%;
 		height: 500px;
+		margin-top: 0px;
+		
+	}
+
+	.sideDivs {
 		font-size: 14px;
-		margin-top: 25px;
+		margin-top: 26px;
 	}
 
 	#blurb {
@@ -50,8 +55,6 @@
 
 	.myDiv {
   		margin: 0 auto;
-  		/*display: inline-block;*/
-  		/*background-color: #ddd;*/
   		width: 750px;
   	}
 
@@ -72,8 +75,8 @@
   	}
 
   	.titleText {
-  		margin-top:15px;
-  		margin-bottom:0px;
+  		margin-top: 15px;
+  		margin-bottom: 2%;
   	}
 
 </style>
