--- a/views/visualizations.html
+++ b/views/visualizations.html
@@ -66,21 +66,51 @@
 	  </nav>
 
 	  <div class="container">
-
 	  	<div class="conainer-inner">
-
 			  <div class="cover">
 			    <h1 class="cover-heading">Visualizations</h1>
-			    <p class="lead blurb">Click on a viz!</p>
-			    <ul class="list-group">
-		          <li class="list-group-item"><a href="quartet">Anscombe's Quartet</a></li>
-		          <li class="list-group-item"><a href="barley">Minnesota Barley Trial</a></li>
-	        	</ul>
+			    
+		    	<div class="container-fluid">
+					  <div class="row">
 
+							<div class="col-md-4 col-md-offset-2 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+							    <div class="thumbnail_container">
+							      <div class="thumbnail">
+							      	<a href="quartet">
+							        	<img src="Quartet284.png">
+							        </a>
+							      </div>
+							    </div> <!-- /thumbnail -->
+
+							    <div class = "caption">
+						         <h3><a href="quartet">Anscombe's Quartet</a></h3>
+						      </div> <!-- /caption -->
+
+							</div>
+
+							<div class="col-md-4 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+						    <div class="thumbnail_container">
+						      <div class="thumbnail">
+						      	<a href="barley">
+						        	<img src="Barley284.png">
+						        </a>
+						      </div>
+						    </div> <!-- /thumbnail -->
+
+						    <div class = "caption">
+					        	<h3><a href="barley">Minnesota Barley Trial</a></h3>
+					      </div> <!-- /caption -->
+
+							</div>
+
+					  </div> <!-- /row -->
+					</div> <!-- /container-fluid -->
+
+	        <div id="push"></div>
+
+	    	</div> <!-- /cover -->
 	    </div> <!-- /container-inner -->
-
 	  </div> <!-- /container -->
-
 
 	  <!-- Bootstrap core JavaScript
 	  ================================================== -->
