--- a/views/index.html
+++ b/views/index.html
@@ -71,7 +71,7 @@
 
 			  <div class="cover">
 			    <h1 class="cover-heading">Welcome to DadaData</h1>
-			    <p class="lead blurb">Interactive data visualizations for realists and surrealits alike.</p>
+			    <p class="lead blurb">Interactive data visualizations for realists and surrealists alike.</p>
 			    <p class="lead">
 			      <a href="visualizations" class="btn btn-lg btn-default">See Visualizations</a>
 			    </p>
