Added media query so that "visualizations" looks good on mobile

--- a/public/custom.css
+++ b/public/custom.css
@@ -30,6 +30,15 @@ body {
 	transform: translate(-50%, -50%);
 }
 
+@media only screen and (max-width: 540px) {
+  .cover {
+    position: relative;
+    top: 0%;
+    left: 0%;
+    transform: translate(0%, 0%);
+  }
+}
+
 .cover-heading {
 	/*text-shadow: #ffffff 0 0 10px;*/
   text-shadow: #ffffff 0 0 15px, #ffffff 0 0 10px, #ffffff 0 0 4px;
