--- a/views/visualizations.html
+++ b/views/visualizations.html
@@ -19,6 +19,7 @@
 
 		<!-- My custom css file -->
 		<link rel="stylesheet" type="text/css" href="custom.css">
+		<link rel="stylesheet" type="text/css" href="visualizations.css">
 
 	</head>
 
