--- a/public/custom.css
+++ b/public/custom.css
@@ -1,9 +1,17 @@
 /*Set your CSS Styles*/
 
+html {
+  /* android cover fix */
+  height:100%;
+  min-height:100%;
+}
+
 body {
   text-align: center;
   height:100%;
 	overflow: scroll;
+  /* android cover fix */
+  min-height:100%;
 	}
 
 .navbar {
